# Calculator

./: CMakeLists.txt  README.md
include/: header.h  header.hpp  poly.hpp
src/: laba3.cpp  source_lexeme.cpp
